# UsTaxes

./: .claude.md  .codecov.yml  .dockerignore  .env.example  .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CLAUDE_CODE_TAX_AUTOMATION_PLAN.md  Dockerfile  LICENSE  README.md  SECURITY.md  craco.config.js  docker-compose.yml  index.html  jest.config.js  notice.js  package-lock.json  package.json  setup.js  tsconfig.json  tsconfig.path.json  vite.config.ts
.claude/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  settings.json
.claude/agents/: form-filler.md  question-asker.md  tax-return-auditor.md
.claude/commands/: estimate-taxes.md  extract-documents.md  optimize-deductions.md  prepare-return.md  validate-return.md
.claude/docs/: AI_AUTOMATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  MASSACHUSETTS_GUIDE.md  QUICK_START.md  README.md  SELF_EMPLOYED_GUIDE.md  STATE_RETURNS_GUIDE.md  TUTORIALS.md  WORKFLOWS.md
.claude/examples/: mcp-integration-example.ts
.claude/guides/: carryover-tracking-guide.md  schedule-c-guide.md  schedule-d-guide.md  schedule-e-guide.md  state-tax-guide.md
.claude/hooks/: check-pii-access.sh  inject-tax-context.sh  load-tax-session.sh  log-operation.sh  save-tax-session.sh  validate-bash-safety.sh
.claude/test-fixtures/: README.md  sample-1099-b.json  sample-1099-div.json  sample-1099-int.json  sample-w2-1.json  (+4 more)
.github/: ARCHITECTURE.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  adding_year.md  pdf-form-filling.md  wage-income-transcript-prefill.openapi.json
mcp-server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  tsconfig.json
opentaxes/: package-lock.json  package.json
public/: catalogs.json  index.html  manifest.json  readme.md
scripts/: build-netlify.sh  buildYears.ts  bundleForms.ts  downloadCatalogs.ts  env.ts  extractPdfSchema.ts  formgen.ts  generateTaxTable.ts  integrateInstructions.ts  migrateToNativeInstructions.ts  netlify-deploy.sh  setup.ts
src/: App.css  App.js  App.tsx  index.css  index.js  index.jsx  pdfHandler.ts  react-app-env.d.ts  serviceWorker.js  setupTests.js  setupTests.ts  testUtil.tsx  util.test.ts  util.ts
src-tauri/: Cargo.toml  readme.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  cmd.rs  lib.rs  main.rs
(+889 files in other folders)
