[package]
name = "us-taxes"
version = "0.1.21"
description = "UsTaxes is an open source webapp for filing US federal income tax. All tax calculations are performed in the browser, so no personal information is stored on external servers!"
license = ""
repository = ""
default-run = "us-taxes"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = [ "derive" ] }
tauri = { version = "1.0.8", features = ["api-all"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "us-taxes"
path = "src/main.rs"
