[package]
name = "us-taxes"
version = "0.1.23"
description = "UsTaxes is an open source webapp for filing US federal income tax. All tax calculations are performed in the browser, so no personal information is stored on external servers!"
license = ""
repository = ""
default-run = "us-taxes"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.195", features = [ "derive" ] }
tauri = { version = "1.0.9", features = ["api-all"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "us-taxes"
path = "src/main.rs"
