[package]
name = "us-taxes"
version = "0.1.23"
description = "UsTaxes is an open source webapp for filing US federal income tax. All tax calculations are performed in the browser, so no personal information is stored on external servers!"
license = ""
repository = ""
default-run = "us-taxes"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.223", features = [ "derive" ] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "us-taxes"
path = "src/main.rs"

[lib]
name = "us_taxes"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
